Introduction to K8S network and cluster

--- a/02 K8S简介.md
+++ b/02 K8S简介.md
@@ -114,7 +114,7 @@ Ingress则可以调度不同业务域、不同URL访问路径的业务流量
 
 ### 配置存储中心——ETCD
 
-存储集群的元数据信息。
+存储集群的元数据信息，数量是奇数个，保证高可用。
 
 ### 主控（master）节点
 
@@ -156,3 +156,18 @@ Ingress则可以调度不同业务域、不同URL访问路径的业务流量
         * Iptables（濒临废弃）
         * Ipvs（推荐）
     * 负责建立和删除包括更新调度规则、通知apiserver自己的更新，或者从apiserver那里获取其他kube-proxy的调度规则变化来更新自己的。
+
+
+
+# K8S三条网络
+
+![](https://borinboy.oss-cn-shanghai.aliyuncs.com/huan/20211009091323.png)
+
+# K8S集群简介
+
+![](https://borinboy.oss-cn-shanghai.aliyuncs.com/huan/20211009092024.png)
+
+> 主控节点与Node节点知识逻辑上的概念，物理上可以部署到一台服务器上。
+
+![](https://borinboy.oss-cn-shanghai.aliyuncs.com/huan/20211009092306.png)
+
