--- a/markdown/02 K8S简介.md
+++ b/markdown/02 K8S简介.md
@@ -171,3 +171,24 @@ Ingress则可以调度不同业务域、不同URL访问路径的业务流量
 
 ![](https://borinboy.oss-cn-shanghai.aliyuncs.com/huan/20211009092306.png)
 
+
+## K8S其他简介
+
+Api Server和Scheduler实际上是通过`127.0.0.1:8080`来通信的。这样避免验证证书、卸载证书等消耗资源的操作。
+
+etcd是通过socket通信的，实际上也是走的https协议。etcd集群内部是通过2379来通信的，外部是通过2380来通信的，所以etcd部署可以根据实际需求来，没有特别大的限制。etcd高可用机制是，启动的时候，互相投票，投票最多的节点在master节点挂掉之后，被选举为新的master节点，并且这个投票是定时根据节点的情况来更新的。
+
+proxy主要是连接pod网络和service网络的。
+
+kubeadm生成的证书有效期是一年。
+**到新的公司或者操作新的集群的时候，第一件事是查看证书的有效期。**
+
+#### 关于cfssl工具
+* cfssl：证书签发的主要工具
+* cfssl-json：将vfsll生成的证书（json）格式，变为文件承载证书
+* cfssl-certinfo：验证证书的信息
+
+#### kubeconfig文件
+* 这是一个K8S用户的配置文件
+* 它里面含有证书信息
+* 证书过期或更换，需要同步替换该文件
