--- a/markdown/08 服务发现.md
+++ b/markdown/08 服务发现.md
@@ -58,3 +58,11 @@ options ndots:5
 因为我们安装了coredns，因此，可以看到svc和集群相关的域都加到search中了。ndots则是DNS递归查询的层数是多少层。
 
 >  想想之前在做主机域的时候，为什么用`host.com`短域名？就是在search的时候，可以`curl` `host.com`前面的短域名去访问那个域。
+
+## 总结：
+* 集群网络 --> Cluster IP
+* Service资源  --> Service Name
+* CoreDNS  --> 实现了Service Name和Cluster IP的自动关联
+
+集群网络是虚拟出来的，通过kube-proxy这个组件把集群网络和pod网络关联起来。
+由于pod IP是由于各种原因会发生变化的，因此必须抽象出一种资源，能够指向pod，相对固定的对外提供服务，这个资源就叫做Service。
