--- a/markdown/09 服务暴露.md
+++ b/markdown/09 服务暴露.md
@@ -144,3 +144,10 @@ ds.yaml
 
 ![](https://borinboy.oss-cn-shanghai.aliyuncs.com/huan/20211022125936.png)
 
+## 总结
+* Ingress控制器 --> 一个简化版对nginx（调度流量）+ go脚本（动态识别yaml文件）（如果变化自动重新加载）
+* Traefik --> 实现了ingress控制器的一个软件
+
+traefik.od.com --> traefik-ingress-service --> Service --> selector --> k8s-app: traefik-ingress
+daemonSet --> labels --> k8s-app: traefik-ingress
+
